# rust-assimp-fix

./: .travis.yml  Cargo.toml  LICENCE  README.md
examples/: open.rs
src/: animation.rs  camera.rs  importer.rs  info.rs  lib.rs  light.rs  log.rs  material.rs  mesh.rs  postprocess.rs  property.rs  scene.rs  texture.rs  types.rs  util.rs
src/ffi/: cexport.rs
